Struct and api sepc for discovery response
