# docs/swagger.json
@@ -43,7 +43,10 @@
                 "summary": "Requests to TNA Discovery API",
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.discoveryAllStruct"
+                        }
                     }
                 }
             }
@@ -126,6 +129,136 @@
                 }
             }
         },
+        "main.DiscoveryCodeCount": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "count": {
+                    "type": "integer"
+                }
+            }
+        },
+        "main.DiscoveryRecordDetails": {
+            "type": "object",
+            "properties": {
+                "adminHistory": {
+                    "type": "string"
+                },
+                "altName": {
+                    "type": "string"
+                },
+                "arrangement": {
+                    "type": "string"
+                },
+                "catalogueLevel": {
+                    "type": "integer"
+                },
+                "closureCode": {
+                    "type": "string"
+                },
+                "closureStatus": {
+                    "type": "string"
+                },
+                "closureType": {
+                    "type": "string"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "context": {
+                    "type": "string"
+                },
+                "corpBodies": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "coveringDates": {
+                    "type": "string"
+                },
+                "department": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "documentType": {
+                    "type": "string"
+                },
+                "endDate": {
+                    "type": "string"
+                },
+                "formerReferenceDep": {
+                    "type": "string"
+                },
+                "formerReferencePro": {
+                    "type": "string"
+                },
+                "heldBy": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "mapDesignation": {
+                    "type": "string"
+                },
+                "mapScale": {
+                    "type": "string"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "numEndDate": {
+                    "type": "integer"
+                },
+                "numStartDate": {
+                    "type": "integer"
+                },
+                "openingDate": {
+                    "type": "string"
+                },
+                "physicalCondition": {
+                    "type": "string"
+                },
+                "places": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "reference": {
+                    "type": "string"
+                },
+                "score": {
+                    "type": "integer"
+                },
+                "source": {
+                    "type": "string"
+                },
+                "startDate": {
+                    "type": "string"
+                },
+                "taxonomies": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                },
+                "urlParameters": {
+                    "type": "string"
+                }
+            }
+        },
         "main.KeywordStruct": {
             "type": "object",
             "properties": {
@@ -145,6 +278,83 @@
                 },
                 "value": {
                     "type": "string"
+                }
+            }
+        },
+        "main.discoveryAllStruct": {
+            "type": "object",
+            "properties": {
+                "cagalogueLevels": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.DiscoveryCodeCount"
+                    }
+                },
+                "closureStatuses": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.DiscoveryCodeCount"
+                    }
+                },
+                "count": {
+                    "type": "integer"
+                },
+                "departments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.DiscoveryCodeCount"
+                    }
+                },
+                "heldByReps": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.DiscoveryCodeCount"
+                    }
+                },
+                "nextBatchMark": {
+                    "type": "string"
+                },
+                "records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.DiscoveryRecordDetails"
+                    }
+                },
+                "referenceFirstLetters": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.DiscoveryCodeCount"
+                    }
+                },
+                "repositories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.DiscoveryCodeCount"
+                    }
+                },
+                "sources": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.DiscoveryCodeCount"
+                    }
+                },
+                "taxonomySubject": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.DiscoveryCodeCount"
+                    }
+                },
+                "timePeriods": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.DiscoveryCodeCount"
+                    }
+                },
+                "titleFirstLetters": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.DiscoveryCodeCount"
+                    }
                 }
             }
         },
